fix missed config

--- a/.jshintrc
+++ b/.jshintrc
@@ -15,7 +15,7 @@
         "cordova": false,
         "File": true,
         "FileSystem": true,
-        "FileReader": true,
+        "LocalFileReader": true,
         "FileWriter": true,
         "FileError": true,
         "LocalFileSystem": true,
