--- a/plugin.xml
+++ b/plugin.xml
@@ -57,8 +57,8 @@ xmlns:android="http://schemas.android.com/apk/res/android"
         <clobbers target="window.FileError" />
     </js-module>
 
-    <js-module src="www/FileReader.js" name="FileReader">
-        <clobbers target="window.FileReader" />
+    <js-module src="www/FileReader.js" name="LocalFileReader">
+        <clobbers target="window.LocalFileReader" />
     </js-module>
 
     <js-module src="www/FileSystem.js" name="FileSystem">
